--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-message-viewer",
   "private": false,
-  "version": "0.1.0",
+  "version": "1.0.0",
   "type": "module",
   "files": [
     "dist"
@@ -20,7 +20,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build && vue-tsc --emitDeclarationOnly",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "publish": "npm publish --access public"
   },
   "dependencies": {
     "vue": "^3.2.47"
@@ -32,5 +33,17 @@
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vue-tsc": "^1.4.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pmanikas/vue-message-viewer"
+  },
+  "keywords": [
+    "vue",
+    "message",
+    "viewer"
+  ],
+  "author": "Pantelis Manikas",
+  "license": "MIT",
+  "homepage": "https://pantelismanikas.com"
 }
